// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpenseList_test render 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={5000}
      createdAt={0}
      description="Car"
      id="1"
      key="1"
      note="new"
    />
    <ExpenseListItem
      amount={50}
      createdAt={-345600000}
      description="Wash"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={100}
      createdAt={345600000}
      description="Gym"
      id="3"
      key="3"
      note="membership"
    />
  </div>
</div>
`;

exports[`ExpenseList_test render_noExpenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No expenses
      </span>
    </div>
  </div>
</div>
`;
